--- a/trial.html
+++ b/trial.html
@@ -61,5 +61,8 @@
           <h3></h3>
       </footer>
       <script src="index.js" charset="utf-8"></script>
+      
+
+      </script>
   </body>
 </html>
